# global-issue-memory

./: .gitignore  LICENSE  readme.md
gim/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml
gim/docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  CONFIGURATION.md  DATABASE.md
gim/migrations/: 001_create_gim_identities.sql  002_create_issue_tables.sql  003_create_oauth_tables.sql  004_add_gim_id_to_usage_events.sql  005_create_crawler_state.sql  006_add_last_revisited_at.sql
gim/scripts/: __init__.py  github_crawler.py  migrate_vectors.py
gim/src/: __init__.py  config.py  exceptions.py  logging_config.py  server.py
gim/src/auth/: __init__.py  gim_id_service.py  ip_rate_limiter.py  jwt_service.py  models.py  oauth_models.py  oauth_provider.py  pkce.py  rate_limiter.py  token_blocklist.py  token_verifier.py
gim/src/crawler/: __init__.py  batch_submitter.py  github_fetcher.py  issue_filter.py  llm_extractor.py  state_manager.py
gim/src/db/: __init__.py  issue_resolver.py  qdrant_client.py  supabase_client.py
gim/src/models/: __init__.py  analytics.py  crawler_state.py  environment.py  fix_bundle.py  issue.py  responses.py
gim/src/services/: __init__.py  batch_submission_service.py  contribution_classifier.py  embedding_service.py  environment_extractor.py  model_parser.py  submission_worker.py
gim/templates/: authorize.html
gim/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_cors_config.py  test_exceptions.py  test_logging.py  test_security_phase1.py  test_security_phase2.py  test_security_phase3.py  test_security_phase4.py  test_security_phase5.py  test_security_phase6.py  test_supabase_client.py
(+180 files in other folders)
