[project]
name = "gim"
version = "0.1.0"
description = "Global Issue Memory - Privacy-preserving MCP server for AI coding issue intelligence"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0,<3",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.0.0",
    "qdrant-client>=1.7.0",
    "google-genai>=1.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires API keys)",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
